--- a/index.html
+++ b/index.html
@@ -31,12 +31,16 @@
                         <p>Alexandria Governorate - Egypt.</p>
                     </div>
                     <div class="grid">
-                        <h3>Date of birth:</h3>
-                        <p>July 25, 2002</p>
-                    </div>
-                    <div class="grid">
                         <h3>Phone No:</h3>
                         <p>01115450120</p>
+                    </div>
+                    <div class="grid">
+                        <h3>Email:</h3>
+                        <p>em7251754@gmail.com</p>
+                    </div>
+                    <div class="grid">
+                        <h3>GitHub:</h3>
+                        <p>https://github.com/esraa544</p>
                     </div>
                 </div>
                 <div class="grid">
@@ -106,12 +110,12 @@
         <div class="grid softSkills_content">
             <p>Arabic</p>
             <p>English</p>
-            <p>Communication Skills</p>
+            <p>Adoptability</p>
             <p>Team Work</p>
             <p>Hard Worker</p>
             <p>Problem Solving</p>
-            <p>Adoptability</p>
             <p>Positive Attitude</p>
+            <p>Communication Skills</p>
         </div>
         <img src="img/1.png" class="right_img">
         <img src="img/vbb-min.png" class="left_img">
